--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav id="menu">
           <ul>
                 <li><a href="#" rel="nofollow" title="#">Inicio</a></li>
-                <li><a href="https://www.imdb.com/es-es/title/tt0816692/" rel="nofollow" title="#">Interestellar</a></li>
+                <li><a href="./html/alejandro.html">Interestellar</a></li>
                 <li><a href="https://m.imdb.com/title/tt4574334/?ref_=nv_sr_srsg_1_tt_7_nm_0_in_0_q_stranger" rel="nofollow" title="#">Stranger Things</a></li>
                 <li><a href="https://www.imdb.com/es-es/title/tt33084834/" rel="nofollow" title="#">Sentai Reddo Isekai de Bôkensha ni Naru</a></li>
                 <li><a href="#" rel="nofollow" title="#">Enlace</a></li>
