Pàgina de The Last of Us i estils

--- a/html/thelastofus.html
+++ b/html/thelastofus.html
@@ -1,24 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Last of Us</title>
-</head>
-
-<body>
-    <main>
-        <h1>The Last of Us</h1>
-        <h2>Serie de TV</h2>
-        <p>Joel y Ellie, una pareja conectada a través de la dureza del mundo en el que viven, se ven obligados a
-            soportar circunstancias brutales y asesinos despiadados en un viaje por la América posterior a una pandemia.
-        </p>
-        <img src="../img/thelastofus.jpg" alt="Portada IMBD The Last of Us" width="50%">
-        <h3>Enlaces</h3>
-        <a href="https://www.imdb.com/es/title/tt3581920/">Serie en IMBD</a>
-    </main>
-
-</body>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>The Last of Us</title>
+        <link rel="stylesheet" href="../css/estilsthelastofus.css">
+    </head>
+    <body>
+        <header>
+            <h1>The Last of Us</h1>
+        </header>
+        <main>
+            <h2>Serie de TV</h2>
+            <table>
+                <tr>
+                    <td>
+                        <h3>
+                            SINOPSIS:
+                        </h3>
+                        <p>
+                            Joel y Ellie, una pareja conectada a través de la dureza del mundo en el que viven, se ven obligados a
+                            soportar circunstancias brutales y asesinos despiadados en un viaje por la América posterior a una pandemia.
+                        </p>
+                    </td>
+                    <td>
+                        <figure>
+                            <img src="../img/thelastofus.jpg" alt="Portada IMBD The Last of Us">
+                        </figure>
+                        <figcaption>Portada IMBD The Last of Us</figcaption>
+                    </td>
+                </tr>
+            </table>
+        </main>
+        <footer>
+            <h3>Enlaces</h3>
+            <ul>
+                <li><a href="https://www.imdb.com/es/title/tt3581920/">Serie en IMBD</a></li>
+                <li><a href="../index.html">Torna enrere</a></li>
+            </ul>
+        </footer>
+    </body>
 </html>
