--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="https://www.imdb.com/es-es/title/tt0816692/" rel="nofollow" title="#">Interestellar</a></li>
                 <li><a href="https://m.imdb.com/title/tt4574334/?ref_=nv_sr_srsg_1_tt_7_nm_0_in_0_q_stranger" rel="nofollow" title="#">Stranger Things</a></li>
                 <li><a href="https://www.imdb.com/es-es/title/tt33084834/" rel="nofollow" title="#">Sentai Reddo Isekai de Bôkensha ni Naru</a></li>
-                <li><a href="#" rel="nofollow" title="#">Enlace</a></li>
+                <li><a href="./html/thelastofus.html">The Last of Us</a></li>
             </ul>
 
     </nav>
