En la branca main La vostra branca i «origin/main» han divergit,  i tenen 1 i 13 comissions distintes cada una, respectivament.  Canvis a cometre:

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <ul>
                 <li><a href="#" rel="nofollow" title="#">Inicio</a></li>
                 <li><a href="html/alejandro.html" rel="nofollow" title="#">Interestellar</a></li>
-                <li><a href="html/" rel="nofollow" title="Stranger Things">Stranger Things</a></li>
+                <li><a href="html/strangerthings.html" rel="nofollow" title="Stranger Things">Stranger Things</a></li>
                 <li><a href="html/hunterxhunter.html" rel="nofollow" title="Hunter x Hunter">Hunter X Hunter</a></li>
                 <li><a href="html/thelastofus.html" rel="nofollow" title="The Last Of Us">The Last Of Us</a></li>
             </ul>
